--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500;700&display=swap');
 :root {
-  --blue: #4073de;
+  --blue: #4073de;   /*rgb(64, 115, 222)*/
   --navlink1 : #ae5cfc;
   --navlinks2: #155ed1;
-  --lightorange: #ffaf00;
-  --orange: #ff8615;
-  --lightred: #ff2f4f;
-  --red: #ff1b99;
+  --lightorange: #ffaf00;   /*rgb(255, 175, 0)*/
+  --orange: #ff8615;        /*rgb(255, 134, 21)*/
+  --lightred: #ff2f4f;      /*rgb(255, 47, 79)*/
+  --red: #ff1b99;           /*rgb(255, 27, 153)*/
   --lightviolet: #fe14e5;
   --violet: #b61fe0;
   --lightgray: #f3f3f3;
@@ -85,4 +85,42 @@ header {
   background-position: center;
   background-size: cover;
   height: 100vh;
+}
+/*************
+  offers
+**************/
+.offers article {
+  flex: 0 0 23%;
+  padding: 20px 40px 0px 20px;
+  color: var(--white);
+  height: 280px;
+  position: relative;
+  top: -100px;
+}
+.offers article:nth-child(1) {
+  background: linear-gradient(rgba(255, 134, 21, .8), rgba(255, 134, 21, .99));
+}
+.offers article:nth-child(2) {
+  background: linear-gradient(rgba(3, 58, 177, 0.8), rgba(3, 58, 177, .99));
+}
+.offers article:nth-child(3) {
+  background: linear-gradient(rgba(255, 47, 79, .8), rgba(255, 47, 79, .99));
+}
+.offers article:nth-child(4) {
+  background: linear-gradient(rgba(64, 115, 222, .8), rgba(64, 115, 222, .99));
+}
+.offers article h2 {
+  font-size: 2.2rem;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.offers article p {
+  width: 90%;
+  line-height: 1.2;
+}
+.offers article i {
+ font-size: 1.6rem;
+ position: absolute;
+ left: 190px;
+ bottom: 20px;
 }
