--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500;700&display=swap');
 :root {
-  --blue: #4073de;   /*rgb(64, 115, 222)*/
+  --blue: #4073de;           /*rgb(64, 115, 222)*/
   --navlink1 : #ae5cfc;
   --navlinks2: #155ed1;
-  --lightorange: #ffaf00;   /*rgb(255, 175, 0)*/
-  --orange: #ff8615;        /*rgb(255, 134, 21)*/
-  --lightred: #ff2f4f;      /*rgb(255, 47, 79)*/
-  --red: #ff1b99;           /*rgb(255, 27, 153)*/
-  --lightviolet: #fe14e5;
-  --violet: #b61fe0;
+  --lightorange: #ffaf00;    /*rgb(255, 175, 0)*/
+  --orange: #ff8615;         /*rgb(255, 134, 21)*/
+  --lightred: #ff2f4f;       /*rgb(255, 47, 79)*/
+  --red: #ff1b99;            /*rgb(255, 27, 153)*/
+  --lightviolet: #fe14e5;    /*rgb(254, 20, 229)*/
+  --violet: #b61fe0;         /*rgb(182, 31, 224)*/
   --lightgray: #f3f3f3;
   --text: #505050;
   --black: #000;
@@ -91,23 +91,23 @@ header {
 **************/
 .offers article {
   flex: 0 0 23%;
-  padding: 20px 40px 0px 20px;
+  padding: 20px 50px 0px 20px;
   color: var(--white);
-  height: 280px;
+  height: 35vh;
   position: relative;
   top: -100px;
 }
 .offers article:nth-child(1) {
-  background: linear-gradient(rgba(255, 134, 21, .8), rgba(255, 134, 21, .99));
+  background: linear-gradient(rgba(255, 175, 0, .9), rgba(255, 134, 21, .99));
 }
 .offers article:nth-child(2) {
-  background: linear-gradient(rgba(3, 58, 177, 0.8), rgba(3, 58, 177, .99));
+  background: linear-gradient(rgba(64, 115, 222, .9), rgba(3, 58, 177, .99));
 }
 .offers article:nth-child(3) {
-  background: linear-gradient(rgba(255, 47, 79, .8), rgba(255, 47, 79, .99));
+  background: linear-gradient(rgba(255, 47, 79, .9), rgba(255, 27, 153, .99));
 }
 .offers article:nth-child(4) {
-  background: linear-gradient(rgba(64, 115, 222, .8), rgba(64, 115, 222, .99));
+  background: linear-gradient(rgba(254, 20, 229, .99), rgba(182, 31, 224, .99));
 }
 .offers article h2 {
   font-size: 2.2rem;
@@ -115,12 +115,61 @@ header {
   margin-bottom: 20px;
 }
 .offers article p {
-  width: 90%;
   line-height: 1.2;
 }
 .offers article i {
  font-size: 1.6rem;
  position: absolute;
- left: 190px;
- bottom: 20px;
+ left: 85%;
+ bottom: 15%;
 }
+/*************
+  welcome
+**************/
+.welcome article {
+  flex: 0 0 49%;
+  height: 50vh;
+  margin-bottom: 50px;
+}
+.welcome img {
+  width: 100%;
+}
+.welcome article:nth-child(1),
+.welcome article:nth-child(4) {
+  background-color: var(--lightgray);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 40px;
+  text-align: left;
+}
+.welcome article:nth-child(2){
+  background: url(img/water-polo-player.png);
+  background-position: center;
+  background-size: cover;
+}
+.welcome article:nth-child(3){
+  background: url(img/player2.png);
+  background-position: center;
+  background-size: cover;
+}
+.welcome h3 {
+  font-size: 3rem;
+}
+.welcome p {
+  margin: 30px 0;
+  font-size: 1.2rem;
+}
+.welcome button {
+  width: 40%;
+  background: linear-gradient(to right, rgba(255, 134, 21, .99),rgba(255, 47, 79, .9));
+  color: var(--white);
+  padding: 20px 30px;
+  border: none;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+.welcome button:hover {
+  background-color: var(--lightred);
+}
+
